Added Header Modification Support to External Routing Service